--- a/the-hunt-2.0/Base.lproj/Main.storyboard
+++ b/the-hunt-2.0/Base.lproj/Main.storyboard
@@ -51,20 +51,15 @@
                                     </button>
                                 </subviews>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhz-jB-275" userLabel="Undo Button">
-                                <rect key="frame" x="284" y="20" width="75" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uhz-jB-275" userLabel="Undo Button">
+                                <rect key="frame" x="319" y="39" width="75" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="Bts-OT-aXF"/>
+                                    <constraint firstAttribute="height" constant="40" id="HI7-fL-wAV"/>
+                                </constraints>
                                 <state key="normal" image="undo"/>
                                 <connections>
                                     <action selector="onUndoPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uuY-T6-ya2"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvR-34-V8m">
-                                <rect key="frame" x="16" y="20" width="90" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" image="thehunt"/>
-                                <connections>
-                                    <action selector="onHuntBtnPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="URK-Fe-ahP"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rs4-hr-4Xw">
@@ -78,6 +73,17 @@
                                     <constraint firstAttribute="height" constant="579" id="rcz-d1-QVo"/>
                                 </constraints>
                             </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bvR-34-V8m">
+                                <rect key="frame" x="20" y="39" width="90" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="1cp-f2-Vxb"/>
+                                    <constraint firstAttribute="height" constant="40" id="elY-VY-lKY"/>
+                                </constraints>
+                                <state key="normal" image="thehunt"/>
+                                <connections>
+                                    <action selector="onHuntBtnPress:" destination="BYZ-38-t0r" eventType="touchUpInside" id="URK-Fe-ahP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -87,7 +93,11 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="vcq-0e-sX9" secondAttribute="bottom" id="N12-jL-Esn"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vcq-0e-sX9" secondAttribute="trailing" id="fxE-VX-eW9"/>
                             <constraint firstItem="vcq-0e-sX9" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="pQS-MD-9bA"/>
+                            <constraint firstItem="bvR-34-V8m" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="s2B-f6-6hB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="uhz-jB-275" secondAttribute="trailing" constant="20" id="xcf-HW-VbR"/>
                             <constraint firstItem="xGV-7e-ne6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ydR-AO-flK"/>
+                            <constraint firstItem="bvR-34-V8m" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="19" id="zGc-1J-3WX"/>
+                            <constraint firstItem="uhz-jB-275" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="19" id="zoT-7x-3KW"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
